# rain-water

./: .gitignore  .travis.yml  README.md  stack.yaml
rain-water/: LICENSE  rain-water.cabal
rain-water/app/: Main.hs
rain-water/src/: Rain.hs
rain-water/test/: Spec.hs
