name:                rain-water
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chris-martin/rain-water
license:             BSD3
license-file:        LICENSE
author:              Chris Martin
maintainer:          ch.martin@gmail.com
copyright:           2017 Chris Martin
--category:
build-type:          Simple
--extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable rain-water-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rain-water
  default-language:    Haskell2010

test-suite rain-water-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rain-water
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-martin/rain-water
