name:                rain-water
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chris-martin/rain-water
license:             BSD3
license-file:        LICENSE
author:              Chris Martin
maintainer:          ch.martin@gmail.com
copyright:           2017 Chris Martin
--category:
build-type:          Simple
--extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rain
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , containers
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

executable rain
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
                     , rain-water
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

test-suite rain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , protolude
                     , rain-water
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/chris-martin/rain-water
